Aggiunta li sidebar

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/2b5def4d88.js" crossorigin="anonymous"></script>
     <title>Spotify</title>
 </head>
 <body>
@@ -13,8 +14,42 @@
 
         <!-- ASIDE -->
         <aside class="sidebar">
-            sidebar
+            <div id="logo">
+                <img src="img/logo.svg" alt="Spotify">
+            </div>
+
+            <div class="menu-side">
+                <nav>
+                    <ul>
+                        <li>About</li>
+                        <li>Cerca</li>
+                        <li>La tua libreria</li>
+                    </ul>
+                </nav>
+            
+                <h2>Playlist</h2>
+
+                <nav>
+                    <ul>
+                        <li>Crea Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                    </ul>
+                </nav>
+
+            </div>
+
+
+
+
         </aside>
+
+        
 
         <!-- HEADER -->
         <header>
