--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <div id="menu-side">
                 <nav>
                     <ul>
-                        <li>Home</li>
-                        <li>Cerca</li>
-                        <li>La tua Libreria</li>
-                        <li><h3>Playlist</h3></li>
+                        <a href="#"><li><img src="img/home.svg" alt=""> Home</li></a>
+                        <a href="#"><li><img src="img/search.svg" alt=""> Cerca</li></a>
+                        <a href="#"><li><img src="img/libreria.svg" alt=""> Playlist</li></a>
+                        <li><h3><i class="fa-solid fa-plus"></i> Playlist</h3></li>
                         <li>Nome Playlist</li>
                         <li>Nome Playlist</li>
                         <li>Nome Playlist</li>
@@ -42,18 +42,29 @@
                 </nav>
             </div>
             <div id="menu-footer">
-                <p>Installa App</p>
+                <a href="#"><p><img src="img/download.svg" alt=""> Installa App</p></a>
                 <hr>
-                <p><strong>Francesco Miceli</strong></p>
+                <a href="#"><p><img src="img/profile.svg" alt=""><strong> Francesco Miceli</strong></p></a>
             </div>
         </div>
     
         <!-- APP CONTAINER -->
     <div id="app-container">
         <div class="header">
-            <a href="">Header</a>
+            <a href="">EFFETUA L'UPGRADE</a>
         </div>
-        <div class="main">Main</div>
+
+
+        <!-- MAIN -->
+        <div class="main">
+            <div id="main-header">
+                <nav>
+                    <ul>
+                        <li><a href="#"></a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </div>
 </div>
 <!-- FINE CONTAINER -->
