--- a/index.html
+++ b/index.html
@@ -75,27 +75,27 @@
                 <div id="album-container">
                     <h3>Recently Played</h3>
                         <div class="row">
-                            <div class="album-container">
+                            <div class="album-box">
                                 <img src="img/metal_lifting.jpg" alt="">
                             </div>
 
-                            <div class="album-container">
+                            <div class="album-box">
                                 <img src="img/stranger.jpeg" alt="">
                             </div>
 
-                            <div class="album-container">
+                            <div class="album-box">
                                 <img src="img/aquietplace.jpeg" alt="">
                             </div>
 
-                            <div class="album-container">
+                            <div class="album-box">
                                 <img src="img/split.jpeg" alt="">
                             </div>
 
-                            <div class="album-container">
+                            <div class="album-box">
                                 <img src="img/cure.jpeg" alt="">
                             </div>
 
-                            <div class="album-container">
+                            <div class="album-box">
                                 <img src="img/sinister.jpeg" alt="">
                             </div>
                             
