--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!-- APP CONTAINER -->
     <div id="app-container">
         <div class="header">
-            <a href="">EFFETUA L'UPGRADE</a>
+            <a href="">EFFETTUA L'UPGRADE</a>
         </div>
 
 
@@ -146,15 +146,25 @@
                 <p>Brano nome</p>
             </div>
 
-            <div id="icons">
+            <div class="icons">
                 <i class="fa-regular fa-heart"></i>
                 <i class="fa-regular fa-folder"></i>
             </div>
         </div>
 
         <div id="player">
-            
+            <div class="column">
+                <div class="icons">
+                    <i class="fa-solid fa-shuffle"></i>
+                    <i class="fa-solid fa-backward-step"></i>
+                    <i class="fa-solid fa-circle-play"></i>
+                    <i class="fa-solid fa-forward-step"></i>
+                    <i class="fa-solid fa-arrow-rotate-right"></i>
+                </div>
+            </div>
         </div>
+
+
         <div id="volume"></div>
 
     </div>
