Completamento Mobile media

--- a/index.html
+++ b/index.html
@@ -25,27 +25,36 @@
             </div>
 
             <div id="menu-side">
-                <nav>
-                    <ul class="xs-hidden">
-                        <a href="#"><li><img class="x-show" src="img/home.svg" alt=""> Home</li></a>
-                        <a href="#"><li><img src="img/search.svg" alt=""> Cerca</li></a>
-                        <a href="#"><li><img src="img/libreria.svg" alt=""> Playlist</li></a>
-                        <li><h3><i class="fa-solid fa-plus"></i> Playlist</h3></li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                    </ul>
-                </nav>
+                <div class="menu-block1">
+                    <nav>
+                        <ul>
+                            <li><a href="#"><img src="img/home.svg" alt=""><span>Home</span></a></li>
+                            <li><a href="#"><img src="img/search.svg" alt=""><span>Cerca</span></a></li>
+                            <li><a href="#"><img src="img/libreria.svg" alt=""><span>Playlist</span></a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div id="menu-block2">
+                    <nav>
+                        <ul>  
+                            <li><h3><i class="fa-solid fa-plus"></i> Playlist</h3></li>     
+                            <li><a href="#">Nome Playlist</a></li>
+                            <li><a href="#">Nome Playlist</a></li>
+                            <li><a href="#">Nome Playlist</a></li>
+                            <li><a href="#">Nome Playlist</a></li>
+                            <li><a href="#">Nome Playlist</a></li>
+                            <li><a href="#">Nome Playlist</a></li>
+                            <li><a href="#">Nome Playlist</a></li>
+                        </ul> 
+                    </nav>
+                </div>
             </div>
+
             <div id="menu-footer">
-                <a href="#"><p><img src="img/download.svg" alt=""> Installa App</p></a>
+                <p><a href="#"><img src="img/download.svg" alt=""><span> Installa App</span></a></p>
                 <hr>
-                <a href="#"><p><img src="img/profile.svg" alt=""><strong> Francesco Miceli</strong></p></a>
+                <p><a href="#"><img src="img/profile.svg" alt=""><span><strong> Francesco Miceli</strong></span></a></p>
             </div>
         </div>
     
