footer in lavorazione

--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
 
                             <div class="album-box">
                                 <img src="img/aquietplace.jpeg" alt="">
+                                <div class="icon">
+                                    <i class="fa-regular fa-circle-play"></i>
+                                </div>
                                 <p>A Quiet Place</p>
                             </div>
 
@@ -166,24 +169,33 @@
 
         <div id="player">
             <div class="column">
-                <div class="icons">
+                <div class="icons-player">
                     <i class="fa-solid fa-shuffle"></i>
                     <i class="fa-solid fa-backward-step"></i>
                     <i class="fa-solid fa-circle-play"></i>
                     <i class="fa-solid fa-forward-step"></i>
                     <i class="fa-solid fa-arrow-rotate-right"></i>
                 </div>
+
+
+                <div class="progress-bar">
+                    <p>0:25</p>
+                    <div class="bar"></div>
+                    <p>4:25</p>
+                </div>
+                
             </div>
         </div>
 
 
         <!-- <div id="volume"> -->
-            <div id="song-title">
-                <img src="img/sinister.jpeg" alt="title-song">
-                <div class="column">
-                    <p><strong>Sinister</strong></p>
-                    <p>Brano nome</p>
-                </div>
+            <div id="volume">
+                <i class="fa-solid fa-list"></i>
+                <i class="fa-solid fa-display"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                
+                <div class="bar-volume"></div>
+            </div>
 
         <!-- </div> -->
 
