--- a/index.html
+++ b/index.html
@@ -98,9 +98,12 @@
                             </div>
 
                             <div class="album-box">
-                                <img src="img/aquietplace.jpeg" alt="">
-                                <div class="icon">
-                                    <i class="fa-regular fa-circle-play"></i>
+
+                                <div class="cover-container">
+                                    <img src="img/aquietplace.jpeg" alt="">
+                                    <div class="icon">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
                                 </div>
                                 <p>A Quiet Place</p>
                             </div>
