--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;800&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/2b5def4d88.js" crossorigin="anonymous"></script>
-
+    <link rel="icon" href="img/favicon.ico">
+    
     <title>Spotify | Francesco</title>
     
 </head>
@@ -87,18 +88,28 @@
                 <div id="album-container">
                     <h3>Recently Played</h3>
                         <div class="row">
+
                             <div class="album-box">
-                                <img src="img/metal_lifting.jpg" alt="">
-                                <p>Heavy metal</p>
+                                <div class="cover-container">
+                                    <img src="img/metal_lifting.jpg" alt="">
+                                    <div class="icon">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                </div>
+                                <p>A Quiet Place</p>
                             </div>
 
                             <div class="album-box">
-                                <img src="img/stranger.jpeg" alt="">
-                                <p>Stranger Things</p>
+                                <div class="cover-container">
+                                    <img src="img/stranger.jpeg" alt="">
+                                    <div class="icon">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                </div>
+                                <p>A Quiet Place</p>
                             </div>
 
                             <div class="album-box">
-
                                 <div class="cover-container">
                                     <img src="img/aquietplace.jpeg" alt="">
                                     <div class="icon">
@@ -109,18 +120,33 @@
                             </div>
 
                             <div class="album-box">
-                                <img src="img/split.jpeg" alt="">
-                                <p>Split</p>
+                                <div class="cover-container">
+                                    <img src="img/aquietplace.jpeg" alt="">
+                                    <div class="icon">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                </div>
+                                <p>A Quiet Place</p>
                             </div>
 
                             <div class="album-box">
-                                <img src="img/cure.jpeg" alt="">
-                                <p>A cure for Wellness</p>
+                                <div class="cover-container">
+                                    <img src="img/aquietplace.jpeg" alt="">
+                                    <div class="icon">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                </div>
+                                <p>A Quiet Place</p>
                             </div>
 
                             <div class="album-box">
-                                <img src="img/sinister.jpeg" alt="">
-                                <p>Sinister</p>
+                                <div class="cover-container">
+                                    <img src="img/aquietplace.jpeg" alt="">
+                                    <div class="icon">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                </div>
+                                <p>A Quiet Place</p>
                             </div>
                         </div>
 
@@ -183,6 +209,7 @@
 
                 <div class="progress-bar">
                     <p>0:25</p>
+                    <div class="bar bar--white"></div>
                     <div class="bar"></div>
                     <p>4:25</p>
                 </div>
