Visualizzazione Play on hover Funzionante

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
                             <div class="album-box">
                                 <div class="cover-container">
-                                    <img src="img/aquietplace.jpeg" alt="">
+                                    <img src="img/split.jpeg" alt="">
                                     <div class="icon">
                                         <i class="fa-regular fa-circle-play"></i>
                                     </div>
@@ -131,7 +131,7 @@
 
                             <div class="album-box">
                                 <div class="cover-container">
-                                    <img src="img/aquietplace.jpeg" alt="">
+                                    <img src="img/cure.jpeg" alt="">
                                     <div class="icon">
                                         <i class="fa-regular fa-circle-play"></i>
                                     </div>
@@ -141,7 +141,7 @@
 
                             <div class="album-box">
                                 <div class="cover-container">
-                                    <img src="img/aquietplace.jpeg" alt="">
+                                    <img src="img/sinister.jpeg" alt="">
                                     <div class="icon">
                                         <i class="fa-regular fa-circle-play"></i>
                                     </div>
