--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                         <i class="fa-regular fa-circle-play"></i>
                                     </div>
                                 </div>
-                                <p>A Quiet Place</p>
+                                <p><a href="">Heavy Metal</a></p>
                             </div>
 
                             <div class="album-box">
@@ -106,7 +106,7 @@
                                         <i class="fa-regular fa-circle-play"></i>
                                     </div>
                                 </div>
-                                <p>A Quiet Place</p>
+                                <p>Stranger things</p>
                             </div>
 
                             <div class="album-box">
@@ -126,7 +126,7 @@
                                         <i class="fa-regular fa-circle-play"></i>
                                     </div>
                                 </div>
-                                <p>A Quiet Place</p>
+                                <p>Split</p>
                             </div>
 
                             <div class="album-box">
@@ -136,7 +136,7 @@
                                         <i class="fa-regular fa-circle-play"></i>
                                     </div>
                                 </div>
-                                <p>A Quiet Place</p>
+                                <p>A cure for wellness</p>
                             </div>
 
                             <div class="album-box">
@@ -146,7 +146,7 @@
                                         <i class="fa-regular fa-circle-play"></i>
                                     </div>
                                 </div>
-                                <p>A Quiet Place</p>
+                                <p>Sinister</p>
                             </div>
                         </div>
 
@@ -179,12 +179,12 @@
                         <div class="row">
                             <div class="album-box">
                                 <div class="cover-container">
-                                    <img class="radius" src="img/radar.jpeg" alt="">
+                                    <img class="radius" src="img/youg.jpeg" alt="">
                                     <div class="icon">
                                         <i class="fa-regular fa-circle-play"></i>
                                     </div>
                                 </div>
-                                <p>A Daily Mix</p>
+                                <p>Youg</p>
                             </div>
                           
                             <div class="album-box">
@@ -194,7 +194,7 @@
                                         <i class="fa-regular fa-circle-play"></i>
                                     </div>
                                 </div>
-                                <p>A Daily Mix</p>
+                                <p>Einaudi</p>
                             </div>
                         </div>
                 </div>
@@ -211,7 +211,7 @@
         <div id="song-title">
             <img src="img/sinister.jpeg" alt="title-song">
             <div class="column">
-                <p><strong>Sinister</strong></p>
+                <p id="title">Sinister</p>
                 <p>Brano nome</p>
             </div>
 
@@ -234,7 +234,7 @@
 
                 <div class="progress-bar">
                     <p>0:25</p>
-                    <div class="bar bar--white"></div>
+                    <div class="bar bar--white bar--green"></div>
                     <div class="bar"></div>
                     <p>4:25</p>
                 </div>
