--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
             <div id="main-header">
                 <nav>
                     <ul>
-                        <a href="#"><li>IN EVIDENZA</li></a>
-                        <a href="#"><li>PODCAST</li></a>
-                        <a href="#"><li>CLASSIFICHE</li></a>
-                        <a href="#"><li>GENERI E MOOD</li></a>
-                        <a href="#"><li>NUOVE USCITE</li></a>
-                        <a href="#"><li>SCOPRI</li></a>
+                        <li class="white"><a href="#">IN EVIDENZA</li></a>
+                        <li><a href="#">PODCAST</a>
+                        <li><a href="#">CLASSIFICHE</li></a>
+                        <li><a href="#">GENERI E MOOD</li></a>
+                        <li><a href="#">NUOVE USCITE</li></a>
+                        <li><a href="#">SCOPRI</li></a>
                     </ul>
                 </nav>
             </div>
