--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;800&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/2b5def4d88.js" crossorigin="anonymous"></script>
     <link rel="icon" href="img/favicon.ico">
@@ -73,7 +73,7 @@
             <div id="main-header">
                 <nav>
                     <ul>
-                        <li class="white"><a href="#">IN EVIDENZA</li></a>
+                        <li><a  class="white" href="#">IN EVIDENZA</li></a>
                         <li><a href="#">PODCAST</a>
                         <li><a href="#">CLASSIFICHE</li></a>
                         <li><a href="#">GENERI E MOOD</li></a>
