Ultima versione completa e funzionante

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="menu-block1">
                     <nav>
                         <ul>
-                            <li><a href="#"><img src="img/home.svg" alt=""><span>Home</span></a></li>
+                            <li class="green-bar-left"><a href="#"><img src="img/home.svg" alt=""><span>Home</span></a></li>
                             <li><a href="#"><img src="img/search.svg" alt=""><span>Cerca</span></a></li>
                             <li><a href="#"><img src="img/libreria.svg" alt=""><span>Playlist</span></a></li>
                         </ul>
